@@ -10,10 +10,23 @@
     <summary>Groups of global keyboard accelerators for an entire GtkWindow</summary>
     <remarks>
       <para>
-        A GtkAccelGroup represents a group of keyboard accelerators, typically attached to a toplevel GtkWindow (with Gtk.Window.AddAccelGroup ()). Usually you won't need to create a Gtk.AccelGroup directly; instead, when using Gtk.ItemFactory, Gtk# automatically sets up the accelerators for your menus in the item factory's Gtk.AccelGroup.
+        A GtkAccelGroup represents a group of keyboard accelerators,
+        typically attached to a toplevel GtkWindow (with <see
+        cref="M:Gtk.Window.AddAccelGroup (Gtk.AccelGroup)" />). Usually
+        you won't need to create a Gtk.AccelGroup directly; instead,
+        when using <see cref="T:Gtk.ItemFactory" />, Gtk#
+        automatically sets up the accelerators for your menus in the
+        item factory's <see cref="T:Gtk.AccelGroup" />.
       </para>
       <para>
-        Note that accelerators are different from mnemonics. Accelerators are shortcuts for activating a menu item; they appear alongside the menu item they're a shortcut for. For example "Ctrl+Q" might appear alongside the "Quit" menu item. Mnemonics are shortcuts for GUI elements such as text entries or buttons; they appear as underlined characters. See Gtk.Label.NewWithMnemonic (). Menu items can have both accelerators and mnemonics, of course.
+        Note that accelerators are different from
+        mnemonics. Accelerators are shortcuts for activating a menu
+        item; they appear alongside the menu item they're a shortcut
+        for. For example "Ctrl+Q" might appear alongside the "Quit"
+        menu item. Mnemonics are shortcuts for GUI elements such as
+        text entries or buttons; they appear as underlined
+        characters. See <see cref="M:Gtk.Label.NewWithMnemonic()" />. Menu items can
+        have both accelerators and mnemonics, of course.
       </para>
     </remarks>
   </Docs>
@@ -42,7 +55,7 @@
       <Docs>
         <summary>Finds the <see cref="T:Gtk.AccelGroup" /> to which closure is connected.</summary>
         <param name="closure">A GClosure (<see cref="T:System.IntPtr" />)</param>
-        <returns>The <see cref="T:Gtk.AccelGroup" /> to which 'closure' is connected, or <see langword="null" />.</returns>
+        <returns>The <see cref="T:Gtk.AccelGroup" /> to which <see paramref="closure" /> is connected, or <see langword="null" />.</returns>
         <remarks />
       </Docs>
     </Member>
@@ -86,7 +99,15 @@
         <Parameter Name="closure" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>Installs an accelerator in this group, using an accelerator path to look up the appropriate key and modifiers (see <see cref="M:Gtk.AccelMap.AddEntry ()" />)). When the group is being activated in response to a call to <see cref="M:Gtk.AccelGroup.Activate ()" />, 'closure' will be invoked if the accel_key and accel_mods from <see cref="M:Gtk.AccelGroup.Activate ()" /> match the key and modifiers for the path.</summary>
+        <summary>
+          Installs an accelerator in this group, using an accelerator path to look up the appropriate key and modifiers
+        (see <see cref="M:Gtk.AccelMap.AddEntry ()" />)). When the
+        group is being activated in response to a call to <see
+        cref="M:Gtk.AccelGroup.Activate ()" />, <see
+        paramref="closure" /> will be invoked if the accel_key and
+        accel_mods from <see cref="M:Gtk.AccelGroup.Activate ()" />
+        match the key and modifiers for the path. 
+        </summary>
         <param name="accel_path">Path used for determining key and modifiers.</param>
         <param name="closure">Closure to be executed upon accelerator activation</param>
       </Docs>
