@@ -1,3 +1,8 @@
+2003-06-30  Duncan Mak  <duncan@ximian.com>
+
+	* en/Gtk/AccelGroup.xml: Added some more hyperlinks to the
+	existing text.
+
 2003-06-26  John Luke  <jluke@cfl.rr.com>
 	* en/Gtk/TreeView.xml: update example, paramater references
 	* en/Gtk/Toolbar.xml: update and fix methods
